--- a/src/main/resources/DB.properties
+++ b/src/main/resources/DB.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/Trade
+url=jdbc:mysql://127.0.0.1:3306/trade
 user=root
 password=smt020528
